plugins {
    id 'java'
}

group 'suic'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

sourceCompatibility = 15
targetCompatibility = 15

tasks.withType(JavaCompile).all {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}


dependencies {
    compile group: 'com.svetylkovo', name: 'rojo', version: '1.0.3'
    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'
    testCompileOnly 'org.projectlombok:lombok:1.18.22'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
    compile group: 'com.google.guava', name: 'guava', version: '30.0-jre'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.0'
    compile 'com.fasterxml.jackson.core:jackson-databind:2.12.0'
    implementation 'one.util:streamex:0.7.3'
    compile group: 'net.objecthunter', name: 'exp4j', version: '0.4.8'
    compile group: 'com.github.jshaptic', name: 'js4j', version: '0.1.1'







}
